--- a/ch03.md
+++ b/ch03.md
@@ -1,2 +1,2 @@
-#ch03
-冲冲冲
+#张真源
+##张真源，2003年4月16日出生于重庆市，中国流行乐男歌手、演员，男子演唱组合时代少年团成员。2015年，主演魔幻电影《天空之泪》 [29]  ；同年，加入TF家族成为练习生。2016年11月，随TF家族获得新浪微博首届粉丝嘉年华“秒拍之星奖” [1]  。2017年10月，随TF家族发行首支单曲《超人诞生日记》 [2]  。2018年5月，主演TF家族单元剧《念念》，并为该剧演唱主题曲 [3]  ；10月，发行首支个人单曲《光影》 [4]  。2019年7月，参加台风少年团重组出道综艺节目《台风少年蜕变之战》 [5]  。2021年1月21日，张真源参演的节目《接招吧！前辈》发布群像海报，宣布将于1月29日起每周五22点在东方卫视播出 [6]
