--- a/ch04.md
+++ b/ch04.md
@@ -1,2 +1,2 @@
-#ch04
-成功吧
+#宋亚轩
+##宋亚轩，2004年3月4日出生于山东省滨州市，中国内地男歌手、演员，男子演唱组合时代少年团成员。2015年10月，参加广东电视台少儿节目《真的！很好玩》 [1]  。2016年2月，参加北京卫视音乐节目《音乐大师课第二季》 [2]  ；8月，参加录制北京卫视美食节目《幸福的味道》 [3]  ；9月，参加录制中央电视台《开学第一课》 [4]  。2017年4月，参加录制湖南卫视综艺节目《天天向上》 [5]  ；11月，登上湖南卫视综艺节目《快乐大本营》的舞台 [6]  。2018年5月，参演的网剧《念念》上线 [7]  ；10月，随组合台风少年团在重庆举办出道首唱会，正式出道 [8]  。2019年2月，随组合登上央视春晚的舞台 [9]  ；3月，随组合台风少年团参加录制央视《经典咏流传第二季》 [10]  ；11月，随组合时代少年团举行新歌首唱会 [11]  。2021年1月29日，参加的综艺节目《王牌对王牌第六季》于即日起每周五晚20:30在浙江卫视播出 [12]  ；2月5日，参与录制的综艺节目《接招吧！前辈》在东方卫视和百视TV首播 [13]
