--- a/ch01.md
+++ b/ch01.md
@@ -1,3 +1,2 @@
-#ch01 
-hhhh
-时代少年团 刘耀文
+#丁程鑫
+##丁程鑫，2002年2月24日出生于四川省资阳市安岳县，中国内地流行乐男歌手、影视演员，男子演唱组合时代少年团成员 [1] 2013年，在TF家族自制综艺《TF少年GO》中首次走进大众视野 [2]  。2015年，参加录制TF家族自制综艺《星期五练习生》 [3]  。2016年，参演科幻校园网剧《超少年密码》 [4]  和青春励志剧《旋风少女第二季》 [5]  。2017年4月，参加录制湖南卫视文化节目《中华文明之美》 [6]  ；7月，参演青春励志剧《我们的少年时代》 [7]  ；11月，首登湖南卫视综艺节目《快乐大本营》 [8]  。2018年，参演奇幻校园网剧《念念》 [9]  和青春励志剧《甜蜜暴击》 [10]  。2019年2月，参加录制的综艺《台风少年行》播出 [11]  ；3月，参加录制央视文化音乐节目《经典咏流传第二季》 [12]  。2020年9月，加盟腾讯视频导演选角真人秀《演员请就位第二季》 [13]  ，最终获得“最受观众喜爱演员”称号 [14]  。2021年1月，丁程鑫参加的综艺节目《接招吧！前辈》发布群像海报，于每周五22点在东方卫视播出 [15]  。
